I started on the stretch and then realized I didn't answer the questions in the ReadMe.  I answered those and got them in. My contact page is a real mess right now and I'll have to fix that later.  But my MVP is now finished and I'm pretty confident in it.

--- a/css/index.css
+++ b/css/index.css
@@ -255,7 +255,7 @@ footer {
     flex-direction: column-reverse;
     justify-content: center;
     width: 100%;
-    padding: 2rem 0 0 0;
+    padding: 2rem 0;
   }
 }
 .home .walk .walk-text {
