--- a/less/home-page.less
+++ b/less/home-page.less
@@ -70,7 +70,7 @@
       flex-direction: column-reverse;
       justify-content: center;
       width: 100%;
-      padding: 2rem 0 0 0;
+      padding: 2rem 0;
     }
 
     .walk-text {
